[package]
name = "ebri"
repository = "https://github.com/delta4chat/ebri"
license = "GPL-3.0"
description = "[NOTE: un-tested. use at your own risk.] ebri (ebr-integrated), that is, a `no-std` EBR (Epoch-Based Reclamation) implementation. thanks to the idea from `scc::ebr`."
documentation = "https://docs.rs/ebri"

version = "0.0.1"
authors = ["wvwwvwwv <wvwwvwwv@me.com>", "Delta4 <delta4chat@gmx.com>"]

edition = "2021"
rust-version = "1.65.0"

#readme = "README.md"

keywords = ["ebr", "lock-free", "rcu", "atomic", "garbage"]
categories = ["ebr", "concurrency", "memory-management", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]

[features]
default = []
std = []

[dependencies]
anyhow = { version = "1.0.80", default-features = false }
log = { version = "0.4.20", default-features = false }
mcslock = { version = "0.1.1", default-features = false, features = ["lock_api"] }
once_cell = { version = "1.19.0", default-features = false, features = ["portable-atomic", "race"] }

